welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: not found: value get
    if (estFaceMur() && get(X)!=7){
                        ^ColumnByColumn:7: error: not found: value X
    if (estFaceMur() && get(X)!=7){
                            ^